# Us

./: .env.example  .env.production.example  .eslintrc.json  .gitignore  COMPLETE_IMPLEMENTATION_SUMMARY.md  Dockerfile  GOLDEN_RATIO_IMPLEMENTATION_COMPLETE.md  ISSUES_RESOLVED.md  PROJECT_STATUS.md  README.md  RESEARCH_IMPLEMENTATION.md  RESEARCH_IMPLEMENTATION_COMPLETE.md  SETUP_GUIDE.md  VERCEL_SETUP.md  body.json  docker-compose.yml  drizzle.config.ts  jest.config.js  jest.setup.ts  next.config.js  package-lock.json  package.json  payload.json  payload_with_user.json  prisma-db-push.sql  setup-db.bat  tailwind.config.ts  tsconfig.json
.github/: copilot-instructions.md
.husky/: pre-push
__tests__/: enhancedRecommendations.test.ts  rsbmEngine.test.ts
app/: globals.css  layout.tsx  page.tsx
components/: AdminGuard.tsx
docs/: 100K_MAU_ARCHITECTURE.md  CINEMATIC_UX_IMPLEMENTATION.md  MOBILE_STRATEGY.md  PRISMA_POSTGRES_MIGRATION.md  PRISMA_TO_DRIZZLE_MIGRATION.md  VERCEL_POSTGRES_SETUP.md
drizzle/: 0000_wet_ultimates.supabase.sql  0001_damp_impossible_man.sql  README.md
infra/: PRODUCTION_CHECKLIST.md  README.md  docker-compose.yml  redis.md
k8s/: config.yaml  deployment.yaml  ingress.yaml  namespace.yaml
lib/: adminAuth.ts  advancedAnalytics.ts  auth.ts  conversationAnalyzer.ts  datePlanningOptimizer.ts  easterEggs.ts  featureFlags.ts  goldenRatioAnalyzer.ts  matchSuccessTracker.ts  matchingAlgorithms.ts  otp.ts  prisma-types.ts  prisma.ts  profileQuality.ts  rateLimit.ts  storage.ts  userExperience.ts  utils.ts
ml/: README.md  pyproject.toml  requirements.txt
ml/config/: config.yaml
ml/scripts/: build_ann_index.py  extract_events.py  train_embeddings.py
ml/src/: __init__.py
ml/src/data/: __init__.py  events.py
ml/src/inference/: __init__.py  ann_index.py
ml/src/models/: __init__.py  embeddings.py
prisma/: schema.prisma
public/: manifest.json  sw.js
scripts/: apply_migration.ts  check_debug.ts  seed.ts  (+12 more)
(+164 files in other folders)
